--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,19 @@
          http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
+    <display-name>JSP</display-name>
+    <welcome-file-list>
+<!--        <welcome-file>listar.html</welcome-file>-->
+<!--        <welcome-file>listar.htm</welcome-file>-->
+<!--        <welcome-file>listar.jsp</welcome-file>-->
+        <welcome-file>conteudo.html</welcome-file>
+        <welcome-file>conteudo.htm</welcome-file>
+        <welcome-file>conteudo.jsp</welcome-file>
+        <welcome-file>default.html</welcome-file>
+        <welcome-file>default.htm</welcome-file>
+        <welcome-file>default.jsp</welcome-file>
+    </welcome-file-list>
+
 <!--    <servlet>-->
 <!--        <servlet-name>AutoInit1Servlet</servlet-name>-->
 <!--        <servlet-class>br.com.softblue.servlets.AutoInit1Servlet</servlet-class>-->
